--- a/css/styles.css
+++ b/css/styles.css
@@ -149,3 +149,97 @@ button {
 .selected {
     border: 5px solid #32b72f
 }
+
+.modal-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    width: 377px;
+    height: 353px;
+    background-color: #50d074;
+    color: #ffffff;
+    border-radius: 9px;
+    padding: 21px 26px 0 26px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-title {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 28px;
+}
+
+.order-info {
+    width: 100%;
+    margin-bottom: 24px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+
+.item {
+    width: 100%;
+    font-size: 22px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.total {
+    width: 100%;
+    font-size: 22px;
+    font-weight: 700;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btns-container {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.btns-container .confirm {
+    width: 100%;
+    border-radius: 100px;
+    font-size: 22px;
+    color: #50d074;
+    height: 52px;
+    line-height: 25.78px;
+    font-weight: 700;
+    background-color: #ffffff;
+    cursor: pointer;
+}
+
+.btns-container .cancel {
+    background: none;
+    width: 100%;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 20px;
+    height: 52px;   
+    cursor: pointer;
+}
+
+.noshow {
+    display: none;
+}
